# Messanger

./: pyproject.toml  requirements.txt
app/: main.py  manager.py
client_side/: index.html  script.js
