[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["sadlyOs <jukovkill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
fastapi = {extras = ["all"], version = "^0.115.3"}
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
